--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "formik": "^2.2.9",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-gesture-handler": "^2.8.0",
     "react-native-paper": "^5.0.1",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-reanimated-carousel": "^3.1.5",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
