--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "@react-navigation/native-stack": "^6.9.5",
     "expo": "~47.0.8",
     "expo-font": "^11.0.1",
-    "expo-splash-screen": "^0.17.5",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "firebase": "9.6.11",
     "formik": "^2.2.9",
     "react": "18.1.0",
-    "react-native": "0.70.5",
-    "react-native-gesture-handler": "^2.8.0",
+    "react-native": "0.70.8",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-paper": "^5.0.1",
     "react-native-reanimated": "~2.12.0",
     "react-native-reanimated-carousel": "^3.1.5",
